fixed x-overflow on contact animation

--- a/sass/contact.sass
+++ b/sass/contact.sass
@@ -8,3 +8,5 @@
     font-size: 28pt
     padding: 0
     margin: 0
+    width: 300px
+    margin: 0 auto
